--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0590.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0590.html
@@ -273,19 +273,19 @@
             <ins class="alt" title="nlp 1.00">Δημοσθένης).</ins>
           </span>
         </span>
-        <span id="w_48_0" class="ocr_word" title="bbox 694 680 774 727">
+        <span id="w_48_0_0" class="ocr_word" title="bbox 694 680 774 727">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Πεπὶ</ins>
+            <ins class="alt" title="nlp 2.00">Περὶ</ins>
+          </span>
+        </span>
+        <span id="w_48_0_1" class="ocr_word" title="bbox 694 680 774 727">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_48_1" class="ocr_word" title="bbox 694 680 774 727">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">στεφάνου</ins>
-          </span>
-        </span>
-        <span id="w_49" class="ocr_word" title="bbox 997 681 1095 724">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">12,10</ins>
           </span>
         </span>
       </span>
@@ -360,9 +360,14 @@
             <ins class="alt" title="nlp 1.00">Εὐριπίδης)</ins>
           </span>
         </span>
-        <span id="w_63" class="ocr_word" title="bbox 613 976 757 1019">
+        <span id="w_63_0" class="ocr_word" title="bbox 613 976 757 1019">
           <span class="alternatives">
-            <ins title="nlp 2.00">Phoen.</ins>
+            <ins class="alt" title="nlp 2.00">(Phoen</ins>
+          </span>
+        </span>
+        <span id="w_63_1" class="ocr_word" title="bbox 613 976 757 1019">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 783 976 865 1015">
@@ -373,11 +378,6 @@
         <span id="w_65" class="ocr_word" title="bbox 901 974 1030 1017">
           <span class="alternatives">
             <ins title="nlp 2.00">126,13</ins>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 1085 973 1199 1016">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(Aeol.</ins>
           </span>
         </span>
       </span>
@@ -566,7 +566,7 @@
       <span class="ocr_line" title="bbox 317 1621 840 1669">
         <span id="w_99" class="ocr_word" title="bbox 317 1621 575 1669" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ἡρόδοτος) (1 65) 16,28</ins>
+            <ins title="nlp 2.00">Ἡρόδοτος) (1 65) 16,28</ins>
           </span>
         </span>
       </span>
@@ -605,9 +605,14 @@
             <ins class="alt" title="nlp 2.00">Θέογνις</ins>
           </span>
         </span>
-        <span id="w_103_1" class="ocr_word" title="bbox 319 1796 488 1844">
+        <span id="w_103_1_0" class="ocr_word" title="bbox 319 1796 488 1844">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ν.</ins>
+            <ins class="alt" title="nlp 2.00">(v.</ins>
+          </span>
+        </span>
+        <span id="w_103_1_1" class="ocr_word" title="bbox 319 1796 488 1844">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_104_0" class="ocr_word" title="bbox 679 1800 808 1844">
@@ -618,11 +623,6 @@
         <span id="w_104_1" class="ocr_word" title="bbox 679 1800 808 1844">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">Bergk)</ins>
-          </span>
-        </span>
-        <span id="w_105" class="ocr_word" title="bbox 836 1799 938 1839">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">32,19</ins>
           </span>
         </span>
       </span>
@@ -800,14 +800,14 @@
             <ins class="alt" title="nlp 1.00">569</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 903 2331 1021 2372">
+        <span id="w_136_0" class="ocr_word" title="bbox 903 2331 1021 2372">
           <span class="alternatives">
-            <ins title="nlp 2.00">kühn)</ins>
+            <ins class="alt" title="nlp 2.00">Kühn)</ins>
           </span>
         </span>
-        <span id="w_137" class="ocr_word" title="bbox 1047 2331 1151 2373">
+        <span id="w_136_1" class="ocr_word" title="bbox 903 2331 1021 2372">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30,29</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -868,14 +868,14 @@
             <del title="nlp 0.90">XXIll</del>
           </span>
         </span>
-        <span id="w_148" class="ocr_word" title="bbox 866 2508 1022 2551">
+        <span id="w_148_0" class="ocr_word" title="bbox 866 2508 1022 2551">
           <span class="alternatives">
-            <ins title="nlp 2.00">Wiam.)</ins>
+            <ins class="alt" title="nlp 2.00">Wilam.)</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1049 2508 1152 2551">
+        <span id="w_148_1" class="ocr_word" title="bbox 866 2508 1022 2551">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31,29</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1051,9 +1051,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 318 3090 1200 3140">
-        <span id="w_178" class="ocr_word" title="bbox 318 3090 359 3126" lang="grc">
+        <span id="w_178_0" class="ocr_word" title="bbox 318 3090 359 3126">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ὀλυμπτόδωρος</ins>
+            <ins class="alt" title="nlp 2.00">Ὀλυμπιόδωρος</ins>
+          </span>
+        </span>
+        <span id="w_178_1" class="ocr_word" title="bbox 318 3090 359 3126">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 677 3093 787 3138" lang="grc">
@@ -1069,11 +1074,6 @@
         <span id="w_181" class="ocr_word" title="bbox 1021 3107 1051 3128" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τι</ins>
-          </span>
-        </span>
-        <span id="w_182" class="ocr_word" title="bbox 1065 3105 1200 3140" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐφεῦρεν</ins>
           </span>
         </span>
       </span>
@@ -1137,9 +1137,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1332 268 2142 316">
-        <span id="w_194" class="ocr_word" title="bbox 1332 270 1393 304" lang="grc">
+        <span id="w_194_0" class="ocr_word" title="bbox 1332 270 1393 304">
           <span class="alternatives">
-            <ins title="nlp 2.00">’0λ</ins>
+            <ins class="alt" title="nlp 2.00">Ὀλ</ins>
+          </span>
+        </span>
+        <span id="w_194_1" class="ocr_word" title="bbox 1332 270 1393 304">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1431 268 1448 303" lang="grc">
@@ -1170,11 +1175,6 @@
         <span id="w_200" class="ocr_word" title="bbox 1985 269 2058 304" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">κτλ.</ins>
-          </span>
-        </span>
-        <span id="w_201" class="ocr_word" title="bbox 2086 270 2142 312">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">31,</ins>
           </span>
         </span>
       </span>
@@ -1326,7 +1326,7 @@
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1999 622 2045 667" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Β</ins>
+            <ins title="nlp 2.00">Β</ins>
           </span>
         </span>
         <span id="w_231" class="ocr_word" title="bbox 2061 624 2144 664">
@@ -1400,9 +1400,14 @@
             <ins class="alt" title="nlp 1.00">157,12</ins>
           </span>
         </span>
-        <span id="w_244" class="ocr_word" title="bbox 1858 739 1903 783">
+        <span id="w_244_0" class="ocr_word" title="bbox 1858 739 1903 783">
           <span class="alternatives">
-            <ins title="nlp 2.00">(11</ins>
+            <ins class="alt" title="nlp 2.00">(Π</ins>
+          </span>
+        </span>
+        <span id="w_244_1" class="ocr_word" title="bbox 1858 739 1903 783">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1941 742 2024 786">
@@ -1410,16 +1415,16 @@
             <ins class="alt" title="nlp 1.00">617)</ins>
           </span>
         </span>
-        <span id="w_246" class="ocr_word" title="bbox 2065 742 2139 782">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">64,1</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1338 798 2143 844">
-        <span id="w_247" class="ocr_word" title="bbox 1338 798 1387 842" lang="grc">
+        <span id="w_247_0" class="ocr_word" title="bbox 1338 798 1387 842">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ψ</ins>
+            <ins class="alt" title="nlp 2.00">(Ψ</ins>
+          </span>
+        </span>
+        <span id="w_247_1" class="ocr_word" title="bbox 1338 798 1387 842">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1412 799 1524 840">
@@ -1447,14 +1452,9 @@
             <ins class="alt" title="nlp 1.00">124,25</ins>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 2007 801 2043 844" lang="grc">
+        <span id="w_253_0" class="ocr_word" title="bbox 2007 801 2043 844">
           <span class="alternatives">
-            <ins title="nlp 2.00">(α</ins>
-          </span>
-        </span>
-        <span id="w_254" class="ocr_word" title="bbox 2065 800 2143 844">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">170)</ins>
+            <ins class="alt" title="nlp 2.00">(α</ins>
           </span>
         </span>
       </span>
@@ -1479,9 +1479,14 @@
             <ins class="alt" title="nlp 1.00">41,18</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1876 859 1911 901" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 1876 859 1911 901">
           <span class="alternatives">
-            <ins title="nlp 2.00">(θ</ins>
+            <ins class="alt" title="nlp 2.00">(θ</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 1876 859 1911 901">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1936 859 2003 894" lang="grc">
@@ -1494,11 +1499,6 @@
             <ins title="nlp 2.00">δ</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 2077 859 2143 893">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">379</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1338 916 2144 961">
         <span id="w_263" class="ocr_word" title="bbox 1338 916 1642 961">
@@ -1506,9 +1506,14 @@
             <ins title="nlp 2.00">κ 306) 17,5 sq.</ins>
           </span>
         </span>
-        <span id="w_264_0" class="ocr_word" title="bbox 1693 919 1717 959">
+        <span id="w_264_0_0" class="ocr_word" title="bbox 1693 919 1717 959">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(ι</ins>
+          </span>
+        </span>
+        <span id="w_264_0_1" class="ocr_word" title="bbox 1693 919 1717 959">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_264_1" class="ocr_word" title="bbox 1693 919 1717 959">
@@ -1521,14 +1526,9 @@
             <ins class="alt" title="nlp 1.00">124,24</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 2004 918 2037 961" lang="grc">
+        <span id="w_266_0" class="ocr_word" title="bbox 2004 918 2037 961">
           <span class="alternatives">
-            <ins title="nlp 2.00">(λ</ins>
-          </span>
-        </span>
-        <span id="w_267" class="ocr_word" title="bbox 2062 917 2144 958">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">315)</ins>
+            <ins class="alt" title="nlp 2.00">(λ</ins>
           </span>
         </span>
       </span>
@@ -1538,19 +1538,19 @@
             <ins class="alt" title="nlp 1.00">59,4</ins>
           </span>
         </span>
-        <span id="w_269_0" class="ocr_word" title="bbox 1469 978 1506 1020">
+        <span id="w_269_0_0" class="ocr_word" title="bbox 1469 978 1506 1020">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(μ</ins>
+          </span>
+        </span>
+        <span id="w_269_0_1" class="ocr_word" title="bbox 1469 978 1506 1020">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_269_1" class="ocr_word" title="bbox 1469 978 1506 1020">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">118)</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 1635 977 1756 1018">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">186,11</ins>
           </span>
         </span>
       </span>
@@ -1944,9 +1944,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1272 2094 2148 2143">
-        <span id="w_344" class="ocr_word" title="bbox 1272 2094 1471 2141" lang="grc">
+        <span id="w_344_0" class="ocr_word" title="bbox 1272 2094 1471 2141">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙίνδαρος</ins>
+            <ins class="alt" title="nlp 2.00">Πίνδαρος</ins>
+          </span>
+        </span>
+        <span id="w_344_1" class="ocr_word" title="bbox 1272 2094 1471 2141">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1508 2097 1660 2140">
@@ -1969,11 +1974,6 @@
         <span id="w_348" class="ocr_word" title="bbox 1837 2096 1939 2137">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">96,15</ins>
-          </span>
-        </span>
-        <span id="w_349" class="ocr_word" title="bbox 2002 2095 2148 2143" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Θηβαῖος</ins>
           </span>
         </span>
       </span>
