--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0532.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0532.html
@@ -104,17 +104,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 527 470 582 513">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">8,9</ins>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 630 457 868 500" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ὁπωσοῦν ἢ πρὸς ἑσυτὸ</ins>
-          </span>
-        </span>
-        <span id="w_19" class="ocr_word" title="bbox 960 474 1073 512" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἢ πρὸς ἄλλο.</ins>
+            <ins title="nlp 2.00">8,9 Ὁπωσοῦν ἢ πρὸς ἑαυτὸ ἢ πρὸς ἀλλο.</ins>
           </span>
         </span>
       </span>
@@ -236,9 +226,9 @@
             <ins class="alt" title="nlp 1.00">δ’</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 2050 657 2157 682" lang="grc">
+        <span id="w_43_0" class="ocr_word" title="bbox 2050 657 2157 682">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐδέποτε·</ins>
+            <ins class="alt" title="nlp 2.00">οὐδέποτε·</ins>
           </span>
         </span>
       </span>
@@ -265,12 +255,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1047 712 1220 766" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαφέρει</ins>
-          </span>
-        </span>
-        <span id="w_50" class="ocr_word" title="bbox 1235 726 1244 763">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">διαφέρει;</ins>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 1276 713 1438 764" lang="grc">
@@ -1569,7 +1554,7 @@
         </span>
         <span id="w_300" class="ocr_word" title="bbox 1026 2955 1047 2988" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">8 δὲ] γὰρ ΤV</ins>
+            <ins title="nlp 2.00">δὲ] γὰρ ΤV</ins>
           </span>
         </span>
         <span id="w_301" class="ocr_word" title="bbox 1494 2956 1534 2990">
@@ -1596,7 +1581,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1931 2954 1971 2987" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">12 εἰσιν Κ</ins>
+            <ins title="nlp 2.00">εἰσιν Κ</ins>
           </span>
         </span>
       </span>
