--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0670.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0670.html
@@ -40,8 +40,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1033 105 1460 140">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">INTKUPRRTATIONK</ins>
-            <del title="nlp 0.90">INTKUPRRTATIONK</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1488 103 1609 148">
@@ -134,14 +133,14 @@
             <ins class="alt" title="nlp 1.00">ἀγαθὸν</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 577 293 657 347" lang="grc">
+        <span id="w_23_0" class="ocr_word" title="bbox 577 293 657 347">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; καὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 688 291 747 346" lang="grc">
+        <span id="w_23_1" class="ocr_word" title="bbox 577 293 657 347">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὸ &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">τὸ&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 778 306 915 339" lang="grc">
@@ -353,16 +352,11 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1928 492 2065 545" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προλα-</ins>
+            <ins title="nlp 2.00">προλαβούσῃ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 403 562 2067 625">
-        <span id="w_63" class="ocr_word" title="bbox 403 568 525 625" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βούσῃ</ins>
-          </span>
-        </span>
         <span id="w_64" class="ocr_word" title="bbox 562 568 688 622" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πράξει</ins>
@@ -519,16 +513,11 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1979 711 2066 750" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προ-</ins>
+            <ins title="nlp 2.00">προτάσεις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 402 768 1485 825">
-        <span id="w_95" class="ocr_word" title="bbox 402 788 528 815" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τάσεις</ins>
-          </span>
-        </span>
         <span id="w_96" class="ocr_word" title="bbox 556 788 653 813" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
@@ -821,12 +810,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 583 1482 704 1527">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_151" class="ocr_word" title="bbox 716 1493 723 1515">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 749 1481 878 1516" lang="grc">
@@ -888,13 +872,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1998 1476 2121 1520">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">seripsi</ins>
-            <del title="nlp 0.90">seripsi</del>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 2133 1487 2141 1517">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
