--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0619.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0619.html
@@ -356,14 +356,14 @@
             <ins class="alt" title="nlp 1.00">οὔκ</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 1498 510 1590 537" lang="grc">
+        <span id="w_66_0" class="ocr_word" title="bbox 1498 510 1590 537">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσιν</ins>
+            <ins class="alt" title="nlp 2.00">εἰσιν</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 1621 496 1848 551" lang="grc">
+        <span id="w_66_1" class="ocr_word" title="bbox 1498 510 1590 537">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀντιδιῃρημένα·</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἀντιδιῃρημένα·</ins>
           </span>
         </span>
       </span>
@@ -1548,9 +1548,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_302" class="ocr_word" title="bbox 399 1927 476 1982">
+        <span id="w_302_0" class="ocr_word" title="bbox 399 1927 476 1982">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὄν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὂν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_302_1" class="ocr_word" title="bbox 399 1927 476 1982">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 507 1927 722 1981" lang="grc">
@@ -1586,11 +1591,6 @@
         <span id="w_309" class="ocr_word" title="bbox 1747 1939 1787 1964" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὂν</ins>
-          </span>
-        </span>
-        <span id="w_310" class="ocr_word" title="bbox 1810 1940 1852 1964" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
       </span>
@@ -2081,14 +2081,14 @@
             <ins class="alt" title="nlp 1.00">ἐρωτηματικῷ,</ins>
           </span>
         </span>
-        <span id="w_406" class="ocr_word" title="bbox 1464 2536 1524 2592">
+        <span id="w_406_0" class="ocr_word" title="bbox 1464 2536 1524 2592">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἤ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἢ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_407" class="ocr_word" title="bbox 1556 2549 1855 2589" lang="grc">
+        <span id="w_406_1" class="ocr_word" title="bbox 1464 2536 1524 2592">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰσοδυναμοῦντα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2248,8 +2248,7 @@
         </span>
         <span id="w_439" class="ocr_word" title="bbox 1199 2801 1218 2833">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">G</ins>
-            <del title="nlp 0.90">G</del>
+            <ins title="nlp 2.00">6</ins>
           </span>
         </span>
         <span id="w_440" class="ocr_word" title="bbox 1244 2800 1498 2844" lang="grc">
@@ -2495,13 +2494,8 @@
         </span>
         <span id="w_484" class="ocr_word" title="bbox 1437 2971 1530 3006">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Diels</ins>
+            <ins class="alt" title="nlp 2.00">Diels:</ins>
             <del title="nlp 0.90">Diels</del>
-          </span>
-        </span>
-        <span id="w_485" class="ocr_word" title="bbox 1543 2982 1550 3003">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_486" class="ocr_word" title="bbox 1576 2969 1788 3014" lang="grc">
@@ -2646,7 +2640,7 @@
         </span>
         <span id="w_511" class="ocr_word" title="bbox 1314 3101 1335 3122" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁ</ins>
+            <ins title="nlp 2.00">ᾱ</ins>
           </span>
         </span>
         <span id="w_512" class="ocr_word" title="bbox 1360 3088 1386 3121">
@@ -2720,8 +2714,7 @@
         </span>
         <span id="w_525" class="ocr_word" title="bbox 630 3221 724 3252">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Sloph.</ins>
-            <del title="nlp 0.90">Sloph.</del>
+            <ins title="nlp 2.00">Steph.</ins>
           </span>
         </span>
         <span id="w_526" class="ocr_word" title="bbox 744 3221 777 3245">
@@ -2730,14 +2723,14 @@
             <del title="nlp 0.90">de</del>
           </span>
         </span>
-        <span id="w_527" class="ocr_word" title="bbox 799 3221 916 3250">
+        <span id="w_527_0" class="ocr_word" title="bbox 799 3221 916 3250">
           <span class="alternatives">
-            <ins title="nlp 2.00">Interper.</ins>
+            <ins class="alt" title="nlp 2.00">Interpr.</ins>
           </span>
         </span>
-        <span id="w_528" class="ocr_word" title="bbox 1636 3206 1660 3241">
+        <span id="w_527_1" class="ocr_word" title="bbox 799 3221 916 3250">
           <span class="alternatives">
-            <ins title="nlp 2.00">2</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
